+classifiers.txt; ^.travis.yml,mac_afk/__init__.py,setup.cfg,tests/mac-afk/ ...

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 name = mac-afk
 version = 0.0.0
 url = https://github.com/looking-for-a-job/mac-afk.py
-classifiers = file: .tmp/pypi.org/classifiers.txt
+classifiers = file: classifiers.txt
 description = afk time in seconds
-long_description = file: .tmp/pypi.org/README.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = afk
 
