+mac_afk/days.py,mac_afk/hours.py,mac_afk/minutes.py,mac_afk/seconds.py; ^. ...

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,17 @@
+# setup.cfg generator: https://pypi.org/project/setupcfg/
 [metadata]
 name = mac-afk
-version = 0.0.0
+version = 2019.03.01
 url = https://github.com/looking-for-a-job/mac-afk.py
 classifiers = file: classifiers.txt
-description = afk time in seconds
-long_description = file: README.md
+description = file: description.txt
+long_description = file: pypi.md
 long_description_content_type = text/markdown
 keywords = afk
 
 [options]
 install_requires = 
-	mac-afk-cli
 	public
-	runcmd
 	setuptools
 packages = 
 	mac_afk
