--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,10 @@ python:
 - "nightly"
 notifications:
   email: false
+after_failure:
+- wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+- chmod +x send.sh
+- ./send.sh failure $WEBHOOK_URL
 install: curl -fLs https://git.io/fpfTa | bash -s
 script: true
+
