+package.json,scripts/afk; ^.travis.yml,README.md,mac_afk/days.py,mac_afk/h ...

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
-# setup.cfg generator: https://pypi.org/project/setupcfg/
+# https://pypi.org/project/setupcfg-generator/
 [metadata]
 name = mac-afk
-version = 2019.03.01
+version = 2019.3.22
 url = https://github.com/looking-for-a-job/mac-afk.py
 classifiers = file: classifiers.txt
 description = file: description.txt
-long_description = file: pypi.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = afk
 
@@ -13,5 +13,7 @@ keywords = afk
 install_requires = 
 	public
 	setuptools
+scripts = 
+	scripts/afk
 packages = 
 	mac_afk
